# mailer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  buf.gen.yaml  buf.work.yaml  config.go  docker-compose.yml  fly.toml  go.mod  go.sum  main.go
.github/workflows/: deploy.yaml  docker.yaml  packages.yml  python-sdk.yml  rust-sdk.yml
daemon/: daemon.go  matcher.go  worker.go
docs/: embed.go
http/: http.go  requests.go  responses.go  simple.go  template.go
infrastructure/: .gitignore  package.json
infrastructure/src/: index.ts
logging/: grpc.go  http.go  logger.go
mailer/mailer/v1/: api.proto
proto/: api.pb.go  api.pb.gw.go  api.proto  api_grpc.pb.go  buf.yaml
providers/: debug.go  mailgun.go  providers.go  registry.go  ses.go  smtp.go
rpc/: gateway.go  rpc.go  simple.go  template.go  util.go
sdks/python/: .gitignore  pyproject.toml
sdks/python/mailer/: __init__.py  aio.py  base.py  blocking.py
sdks/rust/: Cargo.toml
sdks/rust/src/: error.rs  lib.rs  template.rs  types.rs
sdks/rust/src/builders/: batch.rs  mod.rs  send.rs  template.rs
template/: parse.go  render.go
tracing/: http.go  tracing.go
version/: version.go
