[tool.poetry]
name = "mailer"
version = "0.1.0"
description = "The Python SDK for the WaffleHacks mailer"
authors = ["Alex Krantz <alex@krantz.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {version = "^3.8.1", extras = ["speedups"]}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipython = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
