[package]
name = "wafflehacks-mailer"
description = "The Rust SDK for the WaffleHacks mailer"
version = "0.2.0"
edition = "2021"

license = "MIT"
homepage = "https://github.com/WaffleHacks/mailer"
repository = "https://github.com/WaffleHacks/mailer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mailer"

[dependencies]
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
